# gdcoach-ai

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md  mod.json  roadmap.md
docs/: gdcoach_1-4.md  how-to-run.md  roadmap.md
server/: .env.example  requirements.txt  server.py
src/: CoachLayer.cpp  CoachLayer.hpp  DeleteDataLayer.cpp  DeleteDataLayer.hpp  TelemetryManager.cpp  TelemetryManager.hpp  main.cpp
worker/: package.json  wrangler.toml
worker/.wrangler/cache/: wrangler-account.json
worker/src/: index.js
